cdk/cdk.out/RIS360-NetworkStack-dev.template.json
{
 "Resources": {
  "RIS360Vpc600C5568": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ris-360-vpc-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/Resource"
   }
  },
  "RIS360VpcpublicSubnet1Subnet0A6C23EB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet1/Subnet"
   }
  },
  "RIS360VpcpublicSubnet1RouteTable1C96C961": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet1/RouteTable"
   }
  },
  "RIS360VpcpublicSubnet1RouteTableAssociation73919E09": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RIS360VpcpublicSubnet1RouteTable1C96C961"
    },
    "SubnetId": {
     "Ref": "RIS360VpcpublicSubnet1Subnet0A6C23EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "RIS360VpcpublicSubnet1DefaultRoute2724A611": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RIS360VpcIGW811F59FE"
    },
    "RouteTableId": {
     "Ref": "RIS360VpcpublicSubnet1RouteTable1C96C961"
    }
   },
   "DependsOn": [
    "RIS360VpcVPCGW3B071077"
   ],
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "RIS360VpcpublicSubnet2Subnet12FB9674": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet2/Subnet"
   }
  },
  "RIS360VpcpublicSubnet2RouteTable1638EC52": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet2/RouteTable"
   }
  },
  "RIS360VpcpublicSubnet2RouteTableAssociation6002B6BD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RIS360VpcpublicSubnet2RouteTable1638EC52"
    },
    "SubnetId": {
     "Ref": "RIS360VpcpublicSubnet2Subnet12FB9674"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "RIS360VpcpublicSubnet2DefaultRouteE1765B18": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RIS360VpcIGW811F59FE"
    },
    "RouteTableId": {
     "Ref": "RIS360VpcpublicSubnet2RouteTable1638EC52"
    }
   },
   "DependsOn": [
    "RIS360VpcVPCGW3B071077"
   ],
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "RIS360VpcprivateSubnet1Subnet84F51AB5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet1/Subnet"
   }
  },
  "RIS360VpcprivateSubnet1RouteTableFC3BD7E9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet1/RouteTable"
   }
  },
  "RIS360VpcprivateSubnet1RouteTableAssociation7D97BE28": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RIS360VpcprivateSubnet1RouteTableFC3BD7E9"
    },
    "SubnetId": {
     "Ref": "RIS360VpcprivateSubnet1Subnet84F51AB5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "RIS360VpcprivateSubnet2Subnet78A86B26": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet2/Subnet"
   }
  },
  "RIS360VpcprivateSubnet2RouteTable82B40D43": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet2/RouteTable"
   }
  },
  "RIS360VpcprivateSubnet2RouteTableAssociation7910CF18": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RIS360VpcprivateSubnet2RouteTable82B40D43"
    },
    "SubnetId": {
     "Ref": "RIS360VpcprivateSubnet2Subnet78A86B26"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "RIS360VpcIGW811F59FE": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ris-360-vpc-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/IGW"
   }
  },
  "RIS360VpcVPCGW3B071077": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "RIS360VpcIGW811F59FE"
    },
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/VPCGW"
   }
  },
  "RIS360VpcS3GatewayEndpoint287B6FF1": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "RIS360VpcprivateSubnet1RouteTableFC3BD7E9"
     },
     {
      "Ref": "RIS360VpcprivateSubnet2RouteTable82B40D43"
     },
     {
      "Ref": "RIS360VpcpublicSubnet1RouteTable1C96C961"
     },
     {
      "Ref": "RIS360VpcpublicSubnet2RouteTable1638EC52"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ris-360-vpc-dev"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "RIS360Vpc600C5568"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/RIS360Vpc/S3GatewayEndpoint/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WNQQuCUBCEf4v35yv10FkkoptYeI1122jT9olvXyLRf4/I8jQzH8NMatNsY5MIRh/juY07buzzoICtgdGfCFP7rHs0xUXqsjBlaDrGQ2iE9MMWV7mgdISmo4UvLPfeIYOyk3/ZlAM/QGnZ2IvSIKQ7UBphmk/nlKsCXu8kamZS97iVc+9YdK7+4stU5F0YkF6mnPTqZJXZZG2TJLp55ngIonwnW331DVTWcBoFAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "RIS360-NetworkStack-dev/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefRIS360Vpc600C55688DAFBCAE": {
   "Value": {
    "Ref": "RIS360Vpc600C5568"
   },
   "Export": {
    "Name": "RIS360-NetworkStack-dev:ExportsOutputRefRIS360Vpc600C55688DAFBCAE"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
